--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,7 +39,7 @@
     <string name="under">Under</string>
     <string name="strategy_name">%s Strategy</string>
     <string name="date_range">%s - %s</string>
-    <string name="set_fav">Set to Favourite Strategy Successfully</string>
+    <string name="set_fav">Added to Favourite Strategy</string>
     <string name="strategy_des">Buy when:\n%s\n\nSell when:\n%s</string>
     <string-array name="radar_label">
         <item>Return</item>
@@ -137,4 +137,7 @@
         "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
         "when a user tries to pick up one of cards.\n\n"
     </string>
+    <string name="tab_perf">PERF</string>
+    <string name="tab_trades">TRADES</string>
+    <string name="tab_desc">DESC</string>
 </resources>
