--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,8 +1,8 @@
 <resources>
     <string name="app_name">AlphaBet</string>
     <string name="symbol">Symbol</string>
-    <string name="start">Start Date</string>
-    <string name="end">End Date</string>
+    <string name="start_date">Start Date</string>
+    <string name="end_date">End Date</string>
     <string name="add_rule_button">Add</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="entry">Entry Rules</string>
@@ -43,6 +43,8 @@
     <string name="error">Error</string>
     <string name="ok">OK</string>
     <string name="share">Share</string>
+    <string name="invalid_number">Please input a valid number</string>
+    <string name="not_positive_number">Please input a positive number</string>
     <string-array name="radar_label">
         <item>Return</item>
         <item>Stability</item>
@@ -92,6 +94,7 @@
     <string name="save">Save</string>
     <string name="strategy">Strategy</string>
     <string name="period">Period</string>
+    <string name="edit_holding">Edit Holding</string>
     <string-array name="trade_table_header">
         <item>Entry Date</item>
         <item>Exit Date</item>
@@ -106,12 +109,20 @@
 
     <!-- Theme Preferences -->
     <string name="theme_title">Theme</string>
-    <string name="search_indicator_hint">Search indicators</string>
+
+    <!-- Indicator List Screen -->
+    <string name="search_hint">Enter text to search</string>
     <string name="notional">Notional</string>
 
     <!-- Share Screen -->
     <string name="up_slogan">To the Moon!</string>
     <string name="down_slogan">Diamond Hand</string>
     <string name="backtest_return">Backtest Return</string>
+
+    <!-- Parameter Optimization -->
+    <string name="start_value">Start</string>
+    <string name="stop_value">Stop</string>
+    <string name="step">Step</string>
+    <string name="opt_no_param">%s - No Parameter</string>
 
 </resources>
